# LLM_Translation

./: README.md  cert.crt  cert.key
consensus-translate/: Cargo.toml  config.json  input.txt  kobold_cpp_implimitation.py
consensus-translate/src/: deepl.rs  get_source.rs  languages.rs  lib.rs  main.rs  openrouter.rs
storyhub/: db.sqlite3
storyhub/scripts/: api_import_story.py
storyhub/stories/: admin.py  api_urls.py  apps.py  filters.py  models.py  serializers.py  services.py  urls_pages.py  views.py  views_pages.py
storyhub/stories/migrations/: 0001_initial.py  0002_alter_illustration_image_url_chapter_and_more.py  0003_story_poster_url.py  0004_merge_0003_story_poster_url_000X_fix_empty_slugs.py  000X_fix_empty_slugs.py
storyhub/storyhub/: asgi.py  settings.py  urls.py  wsgi.py
storyhub/templates/: base.html
storyhub/templates/registration/: login.html  signup.html
storyhub/templates/stories/: catalog.html  story_detail.html
storyhub/templates/translations/: _paragraph_row.html  _stories_list.html  _translation_form.html  dashboard.html  editor.html  preview.html
storyhub/templates/users/: account.html  roles.html
storyhub/tests/: conftest.py  test_access.py  test_parsing.py  test_permissions.py  test_progress_publish.py  test_tags.py
storyhub/translations/: admin.py  api_urls.py  apps.py  models.py  serializers.py  signals.py  urls_pages.py  views.py  views_me.py  views_pages.py
storyhub/translations/migrations/: 0001_initial.py
storyhub/users/: apps.py  forms.py  permissions.py  urls_pages.py  views.py  views_pages.py
(+1 files in other folders)
