[package]
name = "consensus-translate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "translator"
path = "src/main.rs"

[dependencies]
# ВСЕ зависимости, и для библиотеки, и для бинарника, должны быть здесь
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"

# Зависимости для исполняемого файла
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
